projects/chd/master/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master
  namespace: chd-dev
  labels:
    app: master
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  tls:
    - hosts:
      -  chd-master-dev.coherent.in
      secretName: master-tls
  rules:
  - host: "chd-master-dev.coherent.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: master-svc
            port: 
              number: 8082
